--- a/classes/templates/classes/details.html
+++ b/classes/templates/classes/details.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
+<h3 class="center-align red lightenen-5">{{classe.course}}</h3>
+<div class="card">
+    <div class="card-content">
+        {{classe.building}}
+    </div>
+</div>
+
 <form method="GET" action="{% url 'classes:search' %}">
     <input name = "q" value="{{request.GET.q}}" placeholder="search..">
     <button class="btn btn-success" type="submit">
@@ -26,9 +33,13 @@
 
   <div id="mapid"></div>
 
-  <script>
+  <script>  
+    var a = "{{classe.course}}";
+    var loc1 = "{{classe.building_lon}}";
+    var loc2 = "{{classe.building_lat}}";
+
   // initialize the map
-  var mymap = L.map('mapid').setView([40.346, -74.653], 16);
+  var mymap = L.map('mapid').setView([loc1, loc2], 16);
   L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
     maxZoom: 18,
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
@@ -36,7 +47,9 @@
       'Imagery © <a href="http://mapbox.com">Mapbox</a>',
     id: 'mapbox.streets'
   }).addTo(mymap);
-  L.circle([40.3462, -74.652], 5, {
+  L.marker([loc1, loc2]).addTo(mymap)
+    .bindPopup(a + '\n' + b).openPopup();
+  L.circle([loc1, loc2], 5, {
     color: 'red',
     fillColor: '#f03',
     fillOpacity: 0.5
@@ -155,5 +168,5 @@
 </body>
 </html>
 
+<a href="/classes" class="btn">Go back</a>
 {% endblock %}
-
