--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -4,7 +4,7 @@
 
 <ul class ="collection">
     {% for classe in classes %}
-        <li class="collection-item"><a href="/classes/details/{{classe.id}}">{{classe.course}}</a></li>
+        <li class="collection-item"><a href="/classes/details/{{classe.id}}">{{classe.course}} {{classe.number}} {{classe.section}} {{classe.building}} {{classe.room}}</a></li>
     {% endfor %}
 </ul>
 <a href="/classes" class="btn">Go back</a>
