--- a/classes/templates/classes/details.html
+++ b/classes/templates/classes/details.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<h3 class="center-align red lightenen-5">{{classe.course}}</h3>
+<h3 class="center-align red lightenen-5">{{classe.course}} {{classe.number}} {{classe.title}} {{classe.section}}</h3>
 <div class="card">
     <div class="card-content">
-        {{classe.building}}
+        {{classe.building}} {{classe.room}} {{classe.day}} {{classe.time}}
     </div>
 </div>
 
