--- a/classes/templates/classes/details.html
+++ b/classes/templates/classes/details.html
@@ -34,9 +34,8 @@
   <div id="mapid"></div>
 
   <script>  
-    var a = "{{classe.course}}";
-    var b = "{{classe.number}}";
     var c = "{{classe.building}}";
+    var d = "{{classe.room}}"
     var loc1 = "{{classe.building_lon}}";
     var loc2 = "{{classe.building_lat}}";
 
@@ -50,7 +49,7 @@
     id: 'mapbox.streets'
   }).addTo(mymap);
   L.marker([loc1, loc2]).addTo(mymap)
-    .bindPopup(a + b + c).openPopup();
+    .bindPopup(c + d).openPopup();
   L.circle([loc1, loc2], 5, {
     color: 'red',
     fillColor: '#f03',
