--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -19,7 +19,7 @@
    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
    crossorigin=""></script>
   <style>
-    #mapid { width: 1000px; height: 600px; }
+    #mapid { width: 100%; height: 600px; }
   </style>
 </head>
 <body>
