--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h3 class="center-align red lightenen-5">{{title}}</h3>
+<h5 class="center-align">{{title}}</h5>
 <form method="GET" action="{% url 'posts:search' %}">
     <input name = "q" value="{{request.GET.q}}" placeholder="search..">
     <button class="btn btn-success" type="submit">
