--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -4,7 +4,7 @@
 
 <ul class ="collection">
     {% if classes == None %}
-        <b>"Class Not Found"</b>
+        <a href="/classes" class="btn">Go back</a>
     {% endif %}
     {% for classe in classes %}
         <li class="collection-item"><a href="/classes/details/{{classe.id}}">{{classe.course}} {{classe.number}} {{classe.title}} {{classe.section}}</a></li>
