--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="container center-align">
-        <h1>Search Classes</h1>
+        <h4>ClassMaps</h4>
     </header>
     <div class="container">
         {% block content %}
