--- a/classes/templates/classes/details.html
+++ b/classes/templates/classes/details.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h3 class="center-align red lightenen-5">{{classe.course}} {{classe.number}} {{classe.title}} {{classe.section}}</h3>
+<h5 class="center-align">{{classe.course}} {{classe.number}} {{classe.title}} {{classe.section}}</h5>
 <div class="card">
     <div class="card-content">
         {{classe.building}} {{classe.room}} {{classe.day}} {{classe.time}}
