--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -3,12 +3,13 @@
 {% block content %}
 
 <ul class ="collection">
-    {% for classe in classes %}
-        {% if classe.course == None %}
-            <a href="/classes" class="btn">Go back</a>
-        {% endif %}
-        <li class="collection-item"><a href="/classes/details/{{classe.id}}">{{classe.course}} {{classe.number}} {{classe.title}} {{classe.section}} {{classe.building}} {{classe.room}}</a></li>
-    {% endfor %}
+    {% if classes %}
+        <p>Class Not Found!</p>
+    {% else %}
+        {% for classe in classes %}
+            <li class="collection-item"><a href="/classes/details/{{classe.id}}">{{classe.course}} {{classe.number}} {{classe.title}} {{classe.section}} {{classe.building}} {{classe.room}}</a></li>
+        {% endfor %}
+    {% endif %}
 </ul>
 <a href="/classes" class="btn">Go back</a>
 {% endblock %}
