--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -8,7 +8,7 @@
             <li class="collection-item"><a href="/classes/details/{{classe.id}}">{{classe.course}} {{classe.number}} {{classe.title}} {{classe.section}} {{classe.building}} {{classe.room}}</a></li>
         {% endfor %}
     {% else %}
-        <p>Class Not Found!</p>
+        <img src="/images/calvinandhobbes" alt="NotFound">
     {% endif %}
 </ul>
 <a href="/classes" class="btn">Go back</a>
