--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <form method="GET" action="{% url 'classes:search' %}">
-    <input name = "q" value="{{request.GET.q}}" placeholder="search..">
+    <input name = "q" value="{{request.GET.q}}" placeholder="Search dept/course num... ex: COS 333">
     <button class="btn btn-success" type="submit">
         Search
     </button>
