--- a/classes/templates/classes/details.html
+++ b/classes/templates/classes/details.html
@@ -2,12 +2,20 @@
 
 {% block content %}
 
-<h6 class="center-align">{{classe}}</h6>
+{% if building %}
 <div class="card">
     <div class="card-content">
-        {{classe.building}} {{classe.room}} {{classe.day}} {{classe.time}}
+        {{building.building}}
     </div>
 </div>
+{% else %}
+    <h6 class="center-align">{{classe}}</h6>
+    <div class="card">
+        <div class="card-content">
+            {{classe.building}} {{classe.room}} {{classe.day}} {{classe.time}}
+        </div>
+    </div>
+{% endif %}
 
 <form method="GET" action="{% url 'classes:search' %}">
     <input name = "q" value="{{request.GET.q}}" placeholder="Search dept/course num... ex: COS 333">
@@ -34,10 +42,17 @@
   <div id="map"></div>
 
   <script>
+  {% if building %}
+    var c = "{{building.building}}";
+    var d = "";
+    var loc2 = "{{building.building_lon}}";
+    var loc1 = "{{building.building_lat}}";
+  {% else %}
     var c = "{{classe.building}}";
-    var d = "{{classe.room}}"
+    var d = "{{classe.room}}";
     var loc2 = "{{classe.building_lon}}";
     var loc1 = "{{classe.building_lat}}";
+  {% endif %}
 
   // initialize the map
   var map = L.map('map').setView([loc1, loc2], 16);
