--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -7,8 +7,10 @@
         {% for c in classes %}
             <li class="collection-item"><a href="/classes/details/{{c.id}}">{{c}}</a></li>
         {% endfor %}
-    {% elif building %}
-        <li class="collection-item"><a href="/classes/details/{{building.building}}">{{building.building}}</a></li>
+    {% elif buildings %}
+        {% for b in buildings %}
+        <li class="collection-item"><a href="/classes/details/{{b}}">{{b}}</a></li>
+        {% endfor %}
     {% else %}
         <img src="http://www.cs.princeton.edu/~yangsong/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;height:25%;">
     {% endif %}
