--- a/classes/templates/classes/details.html
+++ b/classes/templates/classes/details.html
@@ -27,12 +27,12 @@
 <html>
 <head>
   <title>ClassMaps</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-   crossorigin=""/>
-   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-   crossorigin=""></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="shortcut icon" type="image/x-icon" href="http://leafletjs.com/examples/layers-control/docs/images/favicon.ico">
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <style>
     #map { width: 100%; height: 600px; }
   </style>
@@ -41,7 +41,7 @@
 
   <div id="map"></div>
 
-  <script>
+<script>
   {% if building %}
     var c = "{{building.building}}";
     var d = "";
@@ -54,23 +54,34 @@
     var loc1 = "{{classe.building_lat}}";
   {% endif %}
 
+  // Adds different layer groups
+  var printers = L.layerGroup();
+
   // initialize the map
-  var map = L.map('map').setView([loc1, loc2], 16);
-  L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-    maxZoom: 18,
-    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+  // URLS of maps for different laters (note: need to add attributes)
+  var mbAttr = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
       '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
       'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-    id: 'mapbox.streets'
-  }).addTo(map);
+    mbUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'
+
+  // Different layers
+  var regular   = L.tileLayer(mbUrl, {id: 'mapbox.light', attribution: mbAttr})
+
+  // Initializes the map
+  var map = L.map('map', {
+    center: [40.346, -74.653],
+    zoom: 16,
+    layers: [regular, printers]
+  });
   L.marker([loc1, loc2]).addTo(map)
     .bindPopup(c + " " + d).openPopup();
   L.circle([loc1, loc2], 5, {
     color: 'red',
     fillColor: '#f03',
     fillOpacity: 0.5
-  }).addTo(map).bindPopup("I am a circle.");
+  }).addTo(map)
   var popup = L.popup();
+
   function onMapClick(e) {
     popup
       .setLatLng(e.latlng)
@@ -78,6 +89,34 @@
       .openOn(map);
   }
   map.on('click', onMapClick);
+
+  // Our different layers
+  var baseLayers = {
+    "Regular": regular
+  };
+
+  // Our overlays
+  var overlays = {
+    "Printers": printers
+  };
+
+  // Adds overlays and layers to map
+  L.control.layers(baseLayers, overlays).addTo(map);
+
+  // Limits zoom (we could get rid of this)
+  map.options.minZoom = 14;
+  map.options.maxZoom = 18;
+
+  // Displays current user location and accuracy
+  function onLocationFound(e) {
+    var radius = e.accuracy / 2;
+
+    L.marker(e.latlng).addTo(map)
+        .bindPopup("You are within " + radius + " meters from this point").openPopup();
+
+    L.circle(e.latlng, radius).addTo(map);
+  }
+  map.on('locationfound', onLocationFound);
 </script>
 </body>
 </html>
