--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -95,15 +95,23 @@
      ['40.34673', '-74.655259'],
      ['40.34673', '-74.655259']];
 
-   for (var i = 0; i < printerLocs.length; i++) {
-    L.marker(printerLocs[i]).bindPopup('This is a printer.').addTo(printers);
-   }
+     var printerIcon = L.icon({
+       iconUrl: 'http://www.cs.princeton.edu/~yangsong/printer_icon.png',
+
+       iconSize:     [30, 30], // size of the icon
+       iconAnchor:   [0, 0], // point of the icon which will correspond to marker's location
+       popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
+     })
+
+    for (var i = 0; i < printerLocs.length; i++) {
+      L.marker(printerLocs[i], {icon: printerIcon}).bindPopup('This is a printer.').addTo(printers);
+    }
 
     // URLS of maps for different laters (note: need to add attributes)
     var mbAttr = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-        '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-        'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-      mbUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'
+      '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+      'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+    mbUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'
 
     // Different layers
     var regular   = L.tileLayer(mbUrl, {id: 'mapbox.light', attribution: mbAttr})
@@ -112,7 +120,7 @@
     var map = L.map('map', {
       center: [40.346, -74.653],
       zoom: 16,
-      layers: [regular, printers]
+      layers: [regular]
     });
 
     // Our different layers
@@ -136,8 +144,7 @@
     function onLocationFound(e) {
       var radius = e.accuracy / 2;
 
-      L.marker(e.latlng).addTo(map)
-          .bindPopup("You are within " + radius + " meters from this point").openPopup();
+      L.marker(e.latlng).addTo(map).bindPopup("You are within " + radius + " meters from this point").openPopup();
 
       L.circle(e.latlng, radius).addTo(map);
     }
@@ -145,13 +152,13 @@
 
     // Displays coordinates upon mouse click
     var popup = L.popup();
-      function onMapClick(e) {
-        popup
-          .setLatLng(e.latlng)
-          .setContent("You clicked the map at " + e.latlng.toString())
-          .openOn(map);
-      }
-      map.on('click', onMapClick);
+    function onMapClick(e) {
+      popup
+        .setLatLng(e.latlng)
+        .setContent("You clicked the map at " + e.latlng.toString())
+        .openOn(map);
+    }
+    map.on('click', onMapClick);
   </script>
 </body>
 </html>
