Added actual printer locations to actual map

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -29,71 +29,71 @@
     // Adds different layer groups
     var printers = L.layerGroup();
 
-    var printerLocs = [['40.34614', '-74.660091'],
-     ['40.345863', '-74.656253'],
-     ['40.344532', '-74.655534'],
-     ['40.343418', '-74.655867'],
-     ['40.347546', '-74.654514'],
-     ['40.346659', '-74.653703'],
-     ['40.34714524', '-74.65927882'],
-     ['40.349123', '-74.651827'],
-     ['40.349582', '-74.657495'],
-     ['40.342214', '-74.661144'],
-     ['40.342214', '-74.661144'],
-     ['40.350268', '-74.652827'],
-     ['40.350268', '-74.652827'],
-     ['40.34673', '-74.655259'],
-     ['40.34673', '-74.655259'],
-     ['40.34673', '-74.655259'],
-     ['40.348599', '-74.661556'],
-     ['40.348599', '-74.661556'],
-     ['40.34491', '-74.656064'],
-     ['40.343615', '-74.658358'],
-     ['40.333379', '-74.657018'],
-     ['40.333379', '-74.657018'],
-     ['40.346679', '-74.659941'],
-     ['40.348433', '-74.66236'],
-     ['40.348307', '-74.656521'],
-     ['40.345334', '-74.652546'],
-     ['40.340914', '-74.666387'],
-     ['40.344305', '-74.658391'],
-     ['40.340903', '-74.665119'],
-     ['40.347788', '-74.656319'],
-     ['40.34673', '-74.655259'],
-     ['40.346412', '-74.655946'],
-     ['40.350268', '-74.652827'],
-     ['40.345701', '-74.652474'],
-     ['40.349582', '-74.657495'],
-     ['40.349582', '-74.657495'],
-     ['40.349582', '-74.657495'],
-     ['40.349582', '-74.657495'],
-     ['40.349582', '-74.657495'],
-     ['40.349582', '-74.657495'],
-     ['40.34673', '-74.655259'],
-     ['40.34624', '-74.6528'],
-     ['40.34624', '-74.6528'],
-     ['40.34624', '-74.6528'],
-     ['40.347274', '-74.658045'],
-     ['40.347239', '-74.655894'],
-     ['40.349789', '-74.656103'],
-     ['40.349194', '-74.653644'],
-     ['40.351069', '-74.654141'],
-     ['40.34365', '-74.657332'],
-     ['40.347445', '-74.661497'],
-     ['40.346367', '-74.657862'],
-     ['40.34678', '-74.658659'],
-     ['40.344653', '-74.658267'],
-     ['40.346321', '-74.660941'],
-     ['40.346014', '-74.655508'],
-     ['40.345359', '-74.659666'],
-     ['40.344386', '-74.654874'],
-     ['40.344386', '-74.654874'],
-     ['40.344653', '-74.659248'],
-     ['40.34745173', '-74.66012844'],
-     ['40.34570028', '-74.65758615'],
-     ['40.344719', '-74.656574'],
-     ['40.34673', '-74.655259'],
-     ['40.34673', '-74.655259']];
+    var printerLocs = [['40.34614', '-74.660091', '1901 Hall - Ground Floor', '6'],
+ ['40.345863', '-74.656253', '1937 Hall - Ground Floor', '6'],
+ ['40.344532', '-74.655534', '1976 Hall - Room 33', '6'],
+ ['40.343418', '-74.655867', 'Bloomberg Hall - Room 315', '6'],
+ ['40.347546', '-74.654514', 'Campus Club - 2nd Floor', '6'],
+ ['40.346659', '-74.653703', 'Center for Jewish Life - 2nd Floor', '6'],
+ ['40.34714524', '-74.65927882', 'Edwards Hall - Basement', '6'],
+ ['40.349123', '-74.651827', 'Fields Center - Room 308', '6'],
+ ['40.349582', '-74.657495', 'Firestone Library - Room B-4-K', '6'],
+ ['40.342214', '-74.661144', 'Forbes College - Library, Room 32', '6'],
+ ['40.342214', '-74.661144', 'Forbes College - Rooms 21, 22', '6'],
+ ['40.350268', '-74.652827', 'Friend Center - Room 016', '6'],
+ ['40.350268', '-74.652827', 'Friend Center - Room 017', '6'],
+ ['40.34673', '-74.655259', 'Frist Campus Center - 100 Level', '6'],
+ ['40.34673', '-74.655259', 'Frist Campus Center - 200 Level', '6'],
+ ['40.34673', '-74.655259', 'Frist Campus Center - 300 Level', '6'],
+ ['40.348599', '-74.661556', 'Holder Hall - Room B11', '6'],
+ ['40.348599', '-74.661556', 'Holder Hall - Room B31', '6'],
+ ['40.34491', '-74.656064', 'Julian Street Library', '6'],
+ ['40.343615', '-74.658358', 'Lauritzen Hall - Room 409', '6'],
+ ['40.333379', '-74.657018', 'Lawrence Apartments - Building 1', '6'],
+ ['40.333379', '-74.657018', 'Lawrence Apartments - Building 14', '6'],
+ ['40.346679', '-74.659941', 'Little Hall - Basement', '6'],
+ ['40.348433', '-74.66236', 'Madison Hall - Room G17', '6'],
+ ['40.348307', '-74.656521', 'McCosh Hall - Room B59', '6'],
+ ['40.345334', '-74.652546', 'McDonnell Hall - Brush Gallery', '6'],
+ ['40.340914', '-74.666387', 'New Graduate College - Entry 33/34', '6'],
+ ['40.344305', '-74.658391', 'North Hall - Library', '6'],
+ ['40.340903', '-74.665119', 'Old Graduate College - Room B-9-B', '6'],
+ ['40.347788', '-74.656319', 'Architecture Library - 2nd Floor', '28'],
+ ['40.34673', '-74.655259', 'East Asian Library - Frist Campus Center', '28'],
+ ['40.346412', '-74.655946', 'East Asian Library - Jones Hall', '28'],
+ ['40.350268', '-74.652827', 'Engineering Library - 2nd Floor', '28'],
+ ['40.345701', '-74.652474', 'Fine Hall Library - Basement', '28'],
+ ['40.349582', '-74.657495', 'Firestone Library - 1st Floor, Reserve', '28'],
+ ['40.349582', '-74.657495', 'Firestone Library - 3rd Floor', '28'],
+ ['40.349582', '-74.657495', 'Firestone Library - A Floor', '28'],
+ ['40.349582', '-74.657495', 'Firestone Library - A Floor - Reserve', '28'],
+ ['40.349582', '-74.657495', 'Firestone Library - B Floor', '28'],
+ ['40.349582', '-74.657495', 'Firestone Library - C Floor', '28'],
+ ['40.34673', '-74.655259', 'Frist Campus Center - 100 Level', '28'],
+ ['40.34624', '-74.6528', 'Lewis Library - 1st Floor', '28'],
+ ['40.34624', '-74.6528', 'Lewis Library - 2nd Floor', '28'],
+ ['40.34624', '-74.6528', 'Lewis Library - A Floor', '28'],
+ ['40.347274', '-74.658045', 'Marquand Library', '28'],
+ ['40.347239', '-74.655894', 'Music Library - Woolworth', '28'],
+ ['40.349789', '-74.656103', 'Psychology Library', '28'],
+ ['40.349194', '-74.653644', 'Stokes Library - Basement', '28'],
+ ['40.351069', '-74.654141', '201 Nassau Street', '92'],
+ ['40.34365', '-74.657332', '1981 Hall - Room B10', '29'],
+ ['40.347445', '-74.661497', 'Blair Hall - Entry 11', '29'],
+ ['40.346367', '-74.657862', 'Brown Hall - Basement', '29'],
+ ['40.34678', '-74.658659', 'Dod Hall - Lower Level', '29'],
+ ['40.344653', '-74.658267', 'Fisher Hall Dorm - Room 213', '29'],
+ ['40.346321', '-74.660941', 'Foulke Hall - Basement', '29'],
+ ['40.346014', '-74.655508', 'McCosh Health Center - Solarium', '29'],
+ ['40.345359', '-74.659666', 'Pyne Hall - Room 231', '29'],
+ ['40.344386', '-74.654874', 'Scully Hall - Room 269A', '29'],
+ ['40.344386', '-74.654874', 'Scully Hall - Room 309', '29'],
+ ['40.344653', '-74.659248', 'Spelman Halls - Laundry Room', '29'],
+ ['40.34745173', '-74.66012844', 'Witherspoon Hall - Room 109', '29'],
+ ['40.34570028', '-74.65758615', 'Wright Hall - 3rd Floor', '29'],
+ ['40.344719', '-74.656574', 'Wu Hall - Mellon Library', '29'],
+ ['40.34673', '-74.655259', 'Frist Campus Center - 100 Level', '30'],
+ ['40.34673', '-74.655259', 'Frist Campus Center - B Level', '30']];
 
      var printerIcon = L.icon({
        iconUrl: 'http://www.cs.princeton.edu/~yangsong/printer_icon.png',
@@ -104,8 +104,11 @@
      })
 
     for (var i = 0; i < printerLocs.length; i++) {
-      L.marker(printerLocs[i], {icon: printerIcon}).bindPopup('This is a printer.').addTo(printers);
-    }
+  //if (hi[i][3] == '6' || hi[i][3] == '29') 
+    if (printerLocs[i][3] == '6') L.marker([printerLocs[i][0], printerLocs[i][1]]).bindPopup(printerLocs[i][2]).addTo(printers);
+    if (printerLocs[i][3] == '29') L.marker([printerLocs[i][0], printerLocs[i][1]]).bindPopup(printerLocs[i][2]).addTo(printers);
+    if (printerLocs[i][3] == '28') L.marker([printerLocs[i][0], printerLocs[i][1]]).bindPopup(printerLocs[i][2]).addTo(printers);
+ }
 
     // URLS of maps for different laters (note: need to add attributes)
     var mbAttr = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
