--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -1,5 +1,7 @@
 {% extends 'classes/layout.html' %}
 
+{% load static %}
+
 {% block content %}
 
 <form method="GET" action="{% url 'classes:search' %}">
@@ -9,20 +11,71 @@
     </button>
 </form>
 
+<link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
+
 <html>
 <head>
   <title>ClassMaps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="shortcut icon" type="image/x-icon" href="http://leafletjs.com/examples/layers-control/docs/images/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="http://leafletjs.com/examples/layers-control/docs/images/favicon.ico">
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <style>
-    #map { width: 100%; height: 600px; }
-  </style>
+
+  <div class="slidecontainer">
+      <p>Time: <span id="demo"></span></p>
+      <select id="dayofweek">
+      <option value="All Days">All Days</option>
+      <option value="Monday">Monday</option>
+      <option value="Tuesday">Tuesday</option>
+      <option value="Wednesday">Wednesday</option>
+      <option value="Thursday">Thursday</option>
+      <option value="Friday">Friday</option>
+      <option value="Saturay">Saturday</option>
+      <option value="Sunday">Sunday</option>
+    </select>
+    <select id="year">
+      <option value="Spring 2018">Spring 2018</option>
+      <option value="Fall 2018">Fall 2018</option>
+    </select>
+      <div class="input-group clockpicker pull-center"  data-autoclose="true">
+        <input type="text" class="form-control">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-time"></span>
+        </span>
+      </div>
+  </div>
+
+<script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.min.js' %}"></script>
+<script type="text/javascript">
+  $('.clockpicker').clockpicker({
+    twelvehour: true,
+  })
+  .find('input').change(function(){
+    console.log(this.value);
+  });
+  var input = $('#single-input').clockpicker({
+    placement: 'bottom',
+    align: 'left',
+    autoclose: true,
+    default: 'now'
+  });
+</script>
+
+
+<style>
+  #map { width: 100%; height: 600px; }
+  .slidecontainer {
+      margin: 0 auto;
+      width: 350px;
+  }
+</style>
 </head>
-<body>
 
   <div id="map"></div>
   <script>
@@ -104,7 +157,7 @@
      })
 
     for (var i = 0; i < printerLocs.length; i++) {
-  //if (hi[i][3] == '6' || hi[i][3] == '29') 
+  //if (hi[i][3] == '6' || hi[i][3] == '29')
     if (printerLocs[i][3] == '6') L.marker([printerLocs[i][0], printerLocs[i][1]], {icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
     if (printerLocs[i][3] == '29') L.marker([printerLocs[i][0], printerLocs[i][1]], {icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
     if (printerLocs[i][3] == '28') L.marker([printerLocs[i][0], printerLocs[i][1]], {icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
