--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -179,6 +179,8 @@
       layers: [regular]
     });
 
+      map.locate({setView: true, maxZoom: 16});
+      
     // Our different layers
     var baseLayers = {
       "Regular": regular
