--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -10,9 +10,11 @@
         Search
     </button>
 </form>
+
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
+
 <html>
 <head>
   <title>ClassMaps</title>
@@ -23,46 +25,22 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
-  <div class="slidecontainer">
-      <p>Time: <span id="demo"></span></p>
-      <select id="dayofweek">
-      <option value="All Days">All Days</option>
-      <option value="Monday">Monday</option>
-      <option value="Tuesday">Tuesday</option>
-      <option value="Wednesday">Wednesday</option>
-      <option value="Thursday">Thursday</option>
-      <option value="Friday">Friday</option>
-      <option value="Saturay">Saturday</option>
-      <option value="Sunday">Sunday</option>
-    </select>
-    <select id="year">
-      <option value="Spring 2018">Spring 2018</option>
-      <option value="Fall 2018">Fall 2018</option>
-    </select>
-      <div class="input-group clockpicker pull-center"  data-autoclose="true">
-        <input type="text" class="form-control">
-        <span class="input-group-addon">
-          <span class="glyphicon glyphicon-time"></span>
-        </span>
-      </div>
-  </div>
-
-<script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.min.js' %}"></script>
-<script type="text/javascript">
-  $('.clockpicker').clockpicker({
-    twelvehour: true,
-  })
-  .find('input').change(function(){
-    console.log(this.value);
-  });
-  var input = $('#single-input').clockpicker({
-    placement: 'bottom',
-    align: 'left',
-    autoclose: true,
-    default: 'now'
-  });
+  <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.min.js' %}"></script>
+  <script type="text/javascript">
+    $('.clockpicker').clockpicker({
+      twelvehour: true,
+    })
+    .find('input').change(function(){
+      console.log(this.value);
+    });
+    var input = $('#single-input').clockpicker({
+      placement: 'bottom',
+      align: 'left',
+      autoclose: true,
+      default: 'now'
+    });
 </script>
 
 
@@ -75,6 +53,24 @@
 </style>
 </head>
 
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Day of the Week
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#M">Monday</a>
+    <a class="dropdown-item" href="#T">Tuesday</a>
+    <a class="dropdown-item" href="#W">Wednesday</a>
+    <a class="dropdown-item" href="#Th">Thursday</a>
+    <a class="dropdown-item" href="#F">Friday</a>
+  </div>
+</div>
+      <div class="input-group clockpicker pull-center"  data-autoclose="true">
+        <input type="text" class="form-control">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-time"></span>
+        </span>
+      </div>
   <div id="map"></div>
   <script>
     // Adds different layer groups
@@ -177,8 +173,6 @@
       layers: [regular]
     });
 
-      map.locate({setView: true, maxZoom: 16});
-      
     // Our different layers
     var baseLayers = {
       "Regular": regular
