--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -210,6 +210,18 @@
     }
     map.on('click', onMapClick);
   </script>
+  {% if c %}
+    <script>
+        var a = "{{c.title}}";
+        var b = "{{c.body}}";
+        var c = b.indexOf(",");
+        var loc1 = b.substring(0, c);
+        var loc2 = b.substring(c+1, b.length);
+        L.marker([loc1, loc2]).addTo(mymap)
+        .bindPopup(a).openPopup();
+    </script>
+  {% endif %}  
+    
 </body>
 </html>
 
