--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -5,10 +5,21 @@
 {% block content %}
 
 <form method="GET" action="{% url 'classes:search' %}">
-    <input name = "q" value="{{request.GET.q}}" placeholder="Search dept/course num... ex: COS 333">
+    <div style="width:70%; float:left;">
+     <input name = "q" value="{{request.GET.q}}" placeholder="Search dept/course num... ex: COS 333">
     <button class="btn btn-success" type="submit">
         Search
     </button>
+  </div>
+
+  <div style="width:30%; float:right;">
+      <div class="input-group clockpicker pull-center"  data-autoclose="true">
+        <input type="text" class="form-control">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-time"></span>
+        </span>
+      </div>
+  </div>
 </form>
 
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
@@ -65,12 +76,6 @@
     <a class="dropdown-item" href="#F">Friday</a>
   </div>
 </div>
-      <div class="input-group clockpicker pull-center"  data-autoclose="true">
-        <input type="text" class="form-control">
-        <span class="input-group-addon">
-          <span class="glyphicon glyphicon-time"></span>
-        </span>
-      </div>
   <div id="map"></div>
   <script>
     // Adds different layer groups
