--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -228,7 +228,7 @@
         var loc1 = "{{c.building_lat}}";
     {% endif %}
      L.marker([loc1, loc2]).addTo(map)
-    .bindPopup(a).openPopup();
+    .bindPopup(c + " " + d).openPopup();
   </script>
 
 </body>
