--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -4,6 +4,21 @@
 
 {% block content %}
 
+{% if building %}
+<div class="card">
+    <div class="card-content">
+        {{building.building}}
+    </div>
+</div>
+{% elif %}
+    <h6 class="center-align">{{c}}</h6>
+    <div class="card">
+        <div class="card-content">
+            {{c.building}} {{c.room}} {{c.day}} {{c.time}}
+        </div>
+    </div>
+{% endif %}
+
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
