--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -10,7 +10,7 @@
         {{building.building}}
     </div>
 </div>
-{% elif %}
+{% elif c %}
     <h6 class="center-align">{{c}}</h6>
     <div class="card">
         <div class="card-content">
