--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -58,6 +58,9 @@ input[type=text] {
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
+  <script src="{% static 'classes/bkmkdist/Leaflet.Bookmarks.min.js' %}"></script>
+  <link type="text/css" rel="stylesheet" href="{% static 'classes/bkmkdist/leaflet.bookmarks.css' %}">
+
   <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.min.js' %}"></script>
@@ -200,6 +203,9 @@ input[type=text] {
       layers: [regular]
     });
 
+    // Bookmarks
+    var control = new L.Control.Bookmarks().addTo(map);
+
     // Our different layers
     var baseLayers = {
       "Regular": regular
@@ -249,6 +255,9 @@ input[type=text] {
         var loc2 = "{{c.building_lon}}";
         var loc1 = "{{c.building_lat}}";
     {% endif %}
+    map.fire('bookmark:new', {
+      latlng: new L.LatLng(loc1, loc2)
+    });
      L.marker([loc1, loc2]).addTo(map)
     .bindPopup(c + " " + d).openPopup();
   </script>
