--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -19,9 +19,9 @@
     </div>
 {% endif %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'assets/css/bootstrap.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'dist/bootstrap-clockpicker.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'assets/css/github.min.css' %}">
 
 <form method="GET" action="{% url 'classes:search' %}">
     <input name = "q" value="{{request.GET.q}}" placeholder="Search dept/course num... ex: COS 333">
@@ -51,12 +51,12 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
-  <script src="{% static 'classes/bkmkdist/Leaflet.Bookmarks.min.js' %}"></script>
-  <link type="text/css" rel="stylesheet" href="{% static 'classes/bkmkdist/leaflet.bookmarks.css' %}">
+  <script src="{% static 'bkmkdist/Leaflet.Bookmarks.min.js' %}"></script>
+  <link type="text/css" rel="stylesheet" href="{% static 'bkmkdist/leaflet.bookmarks.css' %}">
 
-  <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'assets/js/jquery.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'dist/bootstrap-clockpicker.min.js' %}"></script>
   <script type="text/javascript">
     $('.clockpicker').clockpicker({
       twelvehour: true,
